--- a/diploma/literatura.bib
+++ b/diploma/literatura.bib
@@ -99,14 +99,33 @@
   note         = {[ogled 26.~12.~2023]}
 }
 
-@inproceedings{amdahl1967,
-  author = {Gene Amdahl},
-  title = {Validity of the Single Processor Approach to Achieving Large Scale Computing Capabilities},
-  booktitle = {Proceedings of the AFIPS Spring Joint Computer Conference},
-  year = {1967},
-  organization = {American Federation of Information Processing Societies}
+@article{amdahl1967validity,
+  title={Validity of the Single Processor Approach to Achieving Large Scale Computing Capabilities},
+  author={Amdahl, Gene},
+  journal={Proceedings of the AFIPS Spring Joint Computer Conference},
+  year={1967},
+  organization={American Federation of Information Processing Societies}
 }
 
+@article{burns1995analyzing,
+  title={Analyzing and avoiding pathological behavior in parallel best-first search},
+  author={Burns, E. Bradley and Hatem, Matthew and Leighton, Michael R. and Ruml, Wheeler},
+  journal={Proceedings of the Fourteenth National Conference on Artificial Intelligence and Ninth Conference on Innovative Applications of Artificial Intelligence},
+  pages={203--210},
+  year={1995},
+  publisher={AAAI Press},
+  url={https://ojs.aaai.org/index.php/AAAI/article/view/11954}
+}
+
+@article{aggarwal2006breadth,
+  title={Breadth-first search with a multi-core computer},
+  author={Aggarwal, Gagan and Sun, X.},
+  journal={Proceedings of the 22nd annual international conference on Supercomputing},
+  pages={137--146},
+  year={2006},
+  publisher={Association for Computing Machinery},
+  url={https://dl.acm.org/doi/10.1145/1183401.1183420}
+}
 
 
 
