--- a/playground/graph/computation_time_analysis/computation_time_analysis.ipynb
+++ b/playground/graph/computation_time_analysis/computation_time_analysis.ipynb
@@ -609,7 +609,11 @@
     "\n",
     "plt.legend()\n",
     "\n",
-    "plt.tight_layout()\n"
+    "plt.tight_layout()\n",
+    "\n",
+    "plt.savefig('dijkstra_v_odvisnosti_od_velikosti_grafa.jpg')\n",
+    "\n",
+    "plt.show()\n"
    ]
   },
   {
@@ -756,6 +760,8 @@
     "\n",
     "plt.legend()\n",
     "\n",
+    "plt.savefig('dijkstra_v_odvisnosti_od_stevila_domen.jpg')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -783,7 +789,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.11"
   },
   "orig_nbformat": 4
  },
