--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -760,8 +760,74 @@ V naslednjem poglavju bomo najprej raziskali funkcijsko implementacijo prioritet
 paralelnega Dijkstrovega algoritma. Nato bomo predstavili sekvenčno in paralelno implementacijo Dijkstrovega algoritma. 
 Na koncu bomo predstavili analizo časovne učinkovitosti paralelnega Dijkstrovega algoritma.
 
-TODO.
+\subsubsection{Implementacija vrste s prednostjo}
 
+Vrsta s prednostjo igra osrednjo vlogo v Dijkstrovem algoritmu, saj omogoča učinkovit izbor naslednjega vozlišča za raziskovanje. 
+Pri tem je pomembno, da je zaradi skupnega pomnilnika vrsta s prednostjo nespremenljiva, saj je v obratnem primeru treba
+še skrbeti, da ne pride do konfliktov pri dostopu ter spreminjanju skupnega pomnilnika (ang. thread race). 
+Definirali smo modul PQ, kjer je vsak element v kopici je vozlišče s prioritetno vrednostjo ter levim in desnim poddrevesom
+(označeno s tipom \texttt{t} v \ref{lst:pq_sig}). Implementacija vrste s prednostjo je povzeta po \cite{okasaki1996}.
 
+\begin{lstlisting}[label=lst:pq_sig]
+module PQ : sig
+  type t
+
+  exception Queue_is_empty
+
+  val empty : unit -> t
+  val is_empty : t -> bool
+  val insert : Node.t -> float -> t -> t
+  val extract : t -> float * Node.t * t
+end = struct
+  type t = Empty | PQNode of float * Node.t * t * t
+
+  ...
+end
+\end{lstlisting}
+
+Glavni operaciji vrste - vstavljanje in izločanje obe sledita istemu principu. Preko ujemanja vzorcev (ang. pattern matching)
+primerjamo prioriteto trenutnega korena z vrednostjo, ki jo vstavljamo ali izločamo. V odvisnosti od primerjave trenutne
+prioritete z vrednostjo, ki jo vstavljamo ali izločamo, se izvede ustrezna operacija. Za preprečevanje izrojenih dreves
+se uporablja rotacija poddreves, kar pomaga ohranjati uravnoteženost. Implementacija funkcije \textit{insert} je prikazana
+v \ref{lst:pq_insert}.
+
+\begin{lstlisting}[label=lst:pq_insert]
+module PQ : sig
+  ...
+end = struct
+  ...
+
+  let insert new_node new_priority pq : t =
+    let rec insert_aux new_node new_priority pq =
+      match pq with
+      | Empty -> 
+          PQNode (new_priority, new_node, Empty, Empty)
+      | PQNode ( existing_priority, 
+                 existing_node, 
+                 left, 
+                 right ) ->
+          if new_priority <= existing_priority then
+            PQNode
+              ( new_priority,
+                new_node,
+                insert_aux existing_node 
+                  existing_priority right,
+                left )
+          else
+            PQNode
+              ( existing_priority,
+                existing_node,
+                insert_aux new_node new_priority right,
+                left )
+    in
+    insert_aux new_node new_priority pq
+    ...
+end
+\end{lstlisting}
+
+V najslabšem primeru je časovna zahtevnost $O(n)$. To se bo namreč zgodilo natanko tedaj, ko bomo ob vsakem vstavljanju
+vstavili element z največjo prioriteto ter ga nam bo uspelo vstaviti pod list z največjo globino v drevesu (tedaj
+rečemo, da je drevo izrojeno). To pa se bo zgodilo redko, saj ob vsakem rekurzivnem klicu premešamo poddrevesa.
+Posledično bo verjetnost, da se bo zgodil najslabši primer, zelo majhna. V povprečju je časovna zahtevnost $O(\log n)$.
 
 \end{document}
