odstranil dve tuji iz diplomske

--- a/diploma/dokument-diplomska-naloga.tex
+++ b/diploma/dokument-diplomska-naloga.tex
@@ -551,7 +551,7 @@ V nasprotju s tem se pri paralelnem izvajanju čas izračuna povečuje manj inte
 
 Zanimivo je tudi opaziti, kako se čas izračuna spreminja pri različnih pragih sekvenčnosti. 
 V obravnavanem primeru sta bila uporabljena dva različna praga sekvenčnosti (35 in 38), kar je omogočilo dodatne
-vpoglede v učinkovitost in skalabilnost paraleliziranega pristopa.
+vpoglede v učinkovitost in prilagodljivost vzporednega pristopa.
 
 \subsection{Paralelno iskanje v širino (PBFS)}
 
